@@ -388,6 +388,7 @@ if __name__=='pymol.setting':
       surface_trim_cutoff   = 348
       surface_trim_factor   = 349
       ray_max_passes        = 350
+      active_selections     = 351
       
    setting_sc = Shortcut(SettingIndex.__dict__.keys())
 
